Add Jetbrains IDE settings and .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+MacOS Finder Junk:
+.DS_Store
+
+
+# Jetbrains IDE Settings
+.idea
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
